# gleam-tauri-app

./: .gitignore  README.md  flake.nix
backend/: Cargo.toml  default.nix  tauri.conf.json
backend/src/: lib.rs
frontend/: bun.lockb  default.nix  gleam.toml  index.html  main.js  manifest.toml  package.json  vite.config.js
frontend/src/: app.gleam  app_dev.gleam  ffi.js
